Added css variable color provider

--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
       ]
     }
   },
+  "capabilities": {
+    "colorProvider": "true"
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
